--- a/3.html
+++ b/3.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Web - Title</title>
+    <title>JavaScript - Title</title>
   </head>
   <body>
     <h1><a href="index.html">Web</a></h1>
